--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: DogOnt
 email: dario.bonino@gmail.com
 description: The DogOnt ontology documentation web site
 url: http://iot-ontologies.github.io/dogont
-baseurl: http://iot-ontologies.github.io/dogont
+baseurl: /dogont
 permalink: /:categories/:year/:title.html
 
 markdown: redcarpet
